// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSelect Disabled FormSelect input  1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-disabled"
  >
    <select
      aria-invalid="false"
      aria-label="disabled FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-:r5:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
      disabled=""
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect FormSelect input with aria-label does not generate console error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="label"
      data-ouia-component-id="OUIA-Generated-FormSelect-:r7:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect FormSelect input with id does not generate console error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="label"
      data-ouia-component-id="OUIA-Generated-FormSelect-:r9:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
      id="id"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect FormSelect input with no aria-label or id generates console error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-FormSelect-:rb:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect Grouped FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="grouped FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-:r3:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <optgroup
        class=""
        label="Group1"
      >
        <option
          class=""
          value="1"
        >
          The First Option
        </option>
        <option
          class=""
          value="2"
        >
          Second option is selected by default
        </option>
      </optgroup>
      <optgroup
        class=""
        label="Group2"
      >
        <option
          class=""
          value="3"
        >
          The Third Option
        </option>
        <option
          class=""
          value="4"
        >
          The Fourth option
        </option>
      </optgroup>
      <optgroup
        class=""
        disabled=""
        label="Group3"
      >
        <option
          class=""
          value="5"
        >
          The Fifth Option
        </option>
        <option
          class=""
          value="6"
        >
          The Sixth option
        </option>
      </optgroup>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect Simple FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="simple FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-:r1:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        disabled=""
        value="please choose"
      >
        Please Choose
      </option>
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
      <option
        class=""
        value="miss"
      >
        Miss
      </option>
      <option
        class=""
        value="mrs"
      >
        Mrs
      </option>
      <option
        class=""
        value="ms"
      >
        Ms
      </option>
      <option
        class=""
        value="dr"
      >
        Dr
      </option>
      <option
        class=""
        disabled=""
        value="other"
      >
        Other
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect invalid FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-error"
  >
    <select
      aria-invalid="true"
      aria-label="invalid FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-:rd:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
          />
        </svg>
      </span>
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect validated success FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-success"
  >
    <select
      aria-invalid="false"
      aria-label="validated FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-:rf:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
          />
        </svg>
      </span>
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect validated warning FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-warning"
  >
    <select
      aria-invalid="false"
      aria-label="validated FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-:rh:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
          />
        </svg>
      </span>
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 320 512"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
            />
          </svg>
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;
